# pytest_dbt

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
docs/: changelog.md
jaffle_shop/: pytest.ini  unit_testing.md
jaffle_shop/models/: customer_details.sql  customer_no_orders.sql  order_size.sql  order_status.sql
jaffle_shop/tests/: test_customers.py  test_customers_no_order.py  test_order_size.py  test_orders.py  test_sample.py  test_udf_customer_details.py
pytest_dbt/: dbt_context.py  pytest_dbt.py  sql_exec.py
